--- a/web/form/form.html
+++ b/web/form/form.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Form</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <form action = "#">
+        <label for = "name">Type your name:</label>
+        <input type = "text" id = "name" name = "name" > 
+        <input type="submit" value="Submit">  
+    </form>
 </body>
 </html>
